// Vitest Snapshot v1

exports[`Pensjonsberegning > viser feilmelding om henting av pensjonberegning feiler 1`] = `
<DocumentFragment>
  <div
    class="navds-alert navds-alert--error navds-alert--medium"
  >
    <svg
      aria-labelledby="title-r6"
      class="navds-alert__icon"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="title-r6"
      >
        Feil
      </title>
      <path
        clip-rule="evenodd"
        d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm3.571 7L17 8.429 13.428 12 17 15.571 15.571 17 12 13.428 8.429 17 7 15.571 10.572 12 7 8.429 8.429 7 12 10.572 15.571 7Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="navds-alert__wrapper navds-body-long"
    >
      <h2
        class="navds-heading navds-heading--small navds-typo--spacing"
      >
        Vi klarte ikke å hente din tidligste mulige uttaksalder. Prøv igjen senere.
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pensjonsberegning > viser loading og deretter riktig header, tekst og knapper 1`] = `
<DocumentFragment>
  <section
    class="_section_1aa5c0"
    data-testid="tidligst-mulig-uttak"
  >
    <p
      class="_ingress_01a375 navds-ingress"
    >
      Du kan tidligst ta ut alderspensjon når du er 62 år og 10 måneder. Hvis du går av senere, får du høyere pensjon i året.
    </p>
  </section>
  <section
    class="_section_1aa5c0 _section_01a375"
  >
    <h2
      class="navds-heading navds-heading--xsmall"
    >
      Når vil du ta ut alderspensjon?
    </h2>
    <ul
      class="navds-chips _chipsWrapper_01a375 _chipsWrapper__hasGap_01a375 navds-chips--medium navds-body-short navds-body-short--small"
    >
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            62 år og 10 md.
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            63 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            64 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            65 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            66 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            67 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            68 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            69 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            70 år
          </span>
        </button>
      </li>
    </ul>
    <button
      class="_visFlereAldere_01a375 navds-button navds-button--tertiary navds-button--xsmall"
    >
      <span
        class="navds-button__icon"
      >
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        aria-live="polite"
        class="navds-label navds-label--small"
      >
        Vis flere aldere
      </span>
    </button>
  </section>
</DocumentFragment>
`;

exports[`Pensjonsberegning > viser riktig label og antall knapper når brukeren ønsker å se flere aldere 1`] = `
<DocumentFragment>
  <section
    class="_section_1aa5c0"
    data-testid="tidligst-mulig-uttak"
  >
    <p
      class="_ingress_01a375 navds-ingress"
    >
      Du kan tidligst ta ut alderspensjon når du er 62 år og 10 måneder. Hvis du går av senere, får du høyere pensjon i året.
    </p>
  </section>
  <section
    class="_section_1aa5c0 _section_01a375"
  >
    <h2
      class="navds-heading navds-heading--xsmall"
    >
      Når vil du ta ut alderspensjon?
    </h2>
    <ul
      class="navds-chips _chipsWrapper_01a375 _chipsWrapper__hasGap_01a375 navds-chips--medium navds-body-short navds-body-short--small"
    >
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            62 år og 10 md.
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            63 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            64 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            65 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            66 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            67 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            68 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            69 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            70 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            71 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            72 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            73 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            74 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            75 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            76 år
          </span>
        </button>
      </li>
      <li>
        <button
          aria-pressed="false"
          class="navds-chips__chip navds-chips__toggle"
        >
          <span
            class="navds-chips__chip-text"
          >
            77 år
          </span>
        </button>
      </li>
    </ul>
    <button
      class="_visFlereAldere_01a375 navds-button navds-button--tertiary navds-button--xsmall"
    >
      <span
        class="navds-button__icon"
      >
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M11.47 7.97a.75.75 0 0 1 1.06 0l5.5 5.5a.75.75 0 1 1-1.06 1.06L12 9.56l-4.97 4.97a.75.75 0 0 1-1.06-1.06l5.5-5.5Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        aria-live="polite"
        class="navds-label navds-label--small"
      >
        Vis færre aldere
      </span>
    </button>
  </section>
</DocumentFragment>
`;
